--- a/config/west.yml
+++ b/config/west.yml
@@ -1,13 +1,14 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      #url-base: https://github.com/zmkfirmware
-      url-base: https://github.com/ftc
+      url-base: https://github.com/zmkfirmware
+    - name: urob
+      url-base: https://github.com/urob
   projects:
     - name: zmk
-      remote: zmkfirmware
-      #revision: main
-      revision: mouse-ftc
+      #remote: zmkfirmware
+      remote: urob
+      revision: main
       import: app/west.yml
   self:
     path: config
